--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/material": "^5.14.12",
     "@mui/styled-engine-sc": "^5.14.12",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
@@ -50,6 +49,12 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "babel-jest": "^29.7.0",
+    "gh-pages": "^6.0.0",
+    "jest": "^27.5.1"
   }
 }
